tests/errors/syn_class1.java
 class syn_class1 { }